style: корректировка popup

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img class="avatar" src="./images/avatar.jpg" alt="Аватар">
             <div class="Profile-Info">
                 <div class="profile-Info__content">
-                    <p class="profile-Info__firstname">Жак-Ив Кусто </p>
+                    <h1 class="profile-Info__firstname">Жак-Ив Кусто </h1>
                     <button class="Edit-Button">
                         <img class="" src="./images/Rectangle.svg" alt="редактировать">
                     </button>
@@ -30,42 +30,42 @@
         </section>
         <section class="Elements">
             <div class="Element">
-                <img class="MaskGroup" src="./images/kirill-pershin-1088404-unsplash.jpg">
+                <img class="MaskGroup" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачевск">
                 <div class="Group">
                     <h2 class="Element__title">Карачаевск</h2>
                     <img class="Element__Like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
             <div class="Element">
-                <img class="MaskGroup" src="./images/kirill-pershin-1404681-unsplash.jpg">
+                <img class="MaskGroup" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
                 <div class="Group">
                     <h2 class="Element__title">Гора Эльбрус</h2>
                     <img class="Element__Like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
             <div class="Element">
-                <img class="MaskGroup" src="./images/kirill-pershin-1556355-unsplash.jpg">
+                <img class="MaskGroup" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
                 <div class="Group">
                     <h2 class="Element__title">Домбай</h2>
                     <img class="Element__Like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
             <div class="Element">
-                <img class="MaskGroup" src="./images/kirill-pershin-1404681-unsplash.jpg">
+                <img class="MaskGroup" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
                 <div class="Group">
                     <h2 class="Element__title">Гора Эльбрус</h2>
                     <img class="Element__Like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
             <div class="Element">
-                <img class="MaskGroup" src="./images/kirill-pershin-1556355-unsplash.jpg">
+                <img class="MaskGroup" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
                 <div class="Group">
                     <h2 class="Element__title">Домбай</h2>
                     <img class="Element__Like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
             <div class="Element">
-                <img class="MaskGroup" src="./images/kirill-pershin-1088404-unsplash.jpg">
+                <img class="MaskGroup" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Ч...">
                 <div class="Group">
                     <h2 class="Element__title">Карачаево-Ч...</h2>
                     <img class="Element__Like" src="./images/Like.svg" alt="лайк">
@@ -83,14 +83,15 @@
                     <form class="form__popup">
                         <input type="text" placeholder="Название" class="form__input form__input_firstname">
                         <input type="text" placeholder="Название" class="form__input form__input_profession">
-                        <buttom class="form__buttom">
-                            <p class="form__buttom-title">Сохранить</p>
-                        </buttom>
                     </form>
+                    <buttom class="buttom">
+                        <p class="buttom__title">Сохранить</p>
+                    </buttom>
                 </div>
             </div>
         </div>
         <script src="./index.js"></script>
+    </main>
 </body>
 
 </html>
