--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
                         <input type="text" placeholder="Название" class="form__input form__input_firstname">
                         <input type="text" placeholder="Название" class="form__input form__input_profession">
                     </form>
-                    <buttom class="buttom">
-                        <p class="buttom__title">Сохранить</p>
-                    </buttom>
+                    <button class="button" type="submit">Сохранить</button>
                 </div>
             </div>
         </div>
