--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <section class="profile">
             <img class="avatar" src="./images/avatar.jpg" alt="Аватар">
-            <div class="Profile-Info">
+            <div class="profile__Profile-Info">
                 <div class="profile-Info__content">
                     <h1 class="profile-Info__firstname">Жак-Ив Кусто </h1>
                     <button class="Edit-Button">
