--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <section class="profile">
             <img class="avatar" src="./images/avatar.jpg" alt="Аватар">
             <div class="profile__Profile-Info">
-                <div class="profile-Info__content">
-                    <h1 class="profile-Info__firstname">Жак-Ив Кусто </h1>
+                <div class="profile__content">
+                    <h1 class="profile__firstname">Жак-Ив Кусто </h1>
                     <button class="Edit-Button">
-                        <img class="" src="./images/Rectangle.svg" alt="редактировать">
+                        <img src="./images/Rectangle.svg" alt="редактировать">
                     </button>
                 </div>
-                <p class="profile-Info__subtext">Исследователь океана</p>
+                <p class="profile__subtext">Исследователь океана</p>
             </div>
             <button class="Add-Button">
                 <img class="" src="./images/RectangleRect.svg" alt="редактировать">
