style: корректировка отступов попит

--- a/index.html
+++ b/index.html
@@ -15,60 +15,60 @@
     <main>
         <section class="profile">
             <img class="avatar" src="./images/avatar.jpg" alt="Аватар">
-            <div class="profile__Profile-Info">
+            <div class="profile__profile-Info">
                 <div class="profile__content">
                     <h1 class="profile__firstname">Жак-Ив Кусто </h1>
-                    <button class="Edit-Button">
+                    <button class="edit-button">
                         <img src="./images/Rectangle.svg" alt="редактировать">
                     </button>
                 </div>
                 <p class="profile__subtext">Исследователь океана</p>
             </div>
-            <button class="Add-Button">
+            <button class="add-button">
                 <img class="" src="./images/RectangleRect.svg" alt="редактировать">
             </button>
         </section>
-        <section class="Elements">
-            <div class="Element">
+        <section class="elements">
+            <div class="element">
                 <img class="MaskGroup" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачевск">
-                <div class="Group">
-                    <h2 class="Element__title">Карачаевск</h2>
-                    <img class="Element__Like" src="./images/Like.svg" alt="лайк">
+                <div class="group">
+                    <h2 class="element__title">Карачаевск</h2>
+                    <img class="element__like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
-            <div class="Element">
+            <div class="element">
                 <img class="MaskGroup" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
-                <div class="Group">
-                    <h2 class="Element__title">Гора Эльбрус</h2>
-                    <img class="Element__Like" src="./images/Like.svg" alt="лайк">
+                <div class="group">
+                    <h2 class="element__title">Гора Эльбрус</h2>
+                    <img class="element__like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
-            <div class="Element">
+            <div class="element">
                 <img class="MaskGroup" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
-                <div class="Group">
-                    <h2 class="Element__title">Домбай</h2>
-                    <img class="Element__Like" src="./images/Like.svg" alt="лайк">
+                <div class="group">
+                    <h2 class="element__title">Домбай</h2>
+                    <img class="element__like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
-            <div class="Element">
+            <div class="element">
                 <img class="MaskGroup" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
-                <div class="Group">
-                    <h2 class="Element__title">Гора Эльбрус</h2>
-                    <img class="Element__Like" src="./images/Like.svg" alt="лайк">
+                <div class="group">
+                    <h2 class="element__title">Гора Эльбрус</h2>
+                    <img class="element__like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
-            <div class="Element">
+            <div class="element">
                 <img class="MaskGroup" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
-                <div class="Group">
-                    <h2 class="Element__title">Домбай</h2>
-                    <img class="Element__Like" src="./images/Like.svg" alt="лайк">
+                <div class="group">
+                    <h2 class="element__title">Домбай</h2>
+                    <img class="element__Like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
-            <div class="Element">
+            <div class="element">
                 <img class="MaskGroup" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Ч...">
-                <div class="Group">
-                    <h2 class="Element__title">Карачаево-Ч...</h2>
-                    <img class="Element__Like" src="./images/Like.svg" alt="лайк">
+                <div class="group">
+                    <h2 class="element__title">Карачаево-Ч...</h2>
+                    <img class="element__like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
         </section>
