style: привести к БЭМ

--- a/index.html
+++ b/index.html
@@ -10,63 +10,63 @@
 
 <body class="page">
     <header class="header">
-        <img class="logo" src="./images/LogoMesto.svg" alt="Логотип">
+        <img class="header__logo" src="./images/LogoMesto.svg" alt="Логотип">
     </header>
     <main>
         <section class="profile">
-            <img class="avatar" src="./images/avatar.jpg" alt="Аватар">
+            <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
             <div class="profile__profile-Info">
                 <div class="profile__content">
                     <h1 class="profile__firstname">Жак-Ив Кусто </h1>
-                    <button class="edit-button">
+                    <button class="profile__edit-button">
                         <img src="./images/Rectangle.svg" alt="редактировать">
                     </button>
                 </div>
                 <p class="profile__subtext">Исследователь океана</p>
             </div>
-            <button class="add-button">
-                <img class="" src="./images/RectangleRect.svg" alt="редактировать">
+            <button class="profile__add-button">
+                <img class="profile____add-button_img" src="./images/RectangleRect.svg" alt="редактировать">
             </button>
         </section>
         <section class="elements">
             <div class="element">
-                <img class="MaskGroup" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачевск">
-                <div class="group">
+                <img class="element__maskgroup" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачевск">
+                <div class="element__group">
                     <h2 class="element__title">Карачаевск</h2>
                     <img class="element__like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
             <div class="element">
-                <img class="MaskGroup" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
-                <div class="group">
+                <img class="element__maskgroup" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
+                <div class="element__group">
                     <h2 class="element__title">Гора Эльбрус</h2>
                     <img class="element__like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
             <div class="element">
-                <img class="MaskGroup" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
-                <div class="group">
+                <img class="element__maskgroup" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
+                <div class="element__group">
                     <h2 class="element__title">Домбай</h2>
                     <img class="element__like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
             <div class="element">
-                <img class="MaskGroup" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
-                <div class="group">
+                <img class="element__maskgroup" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
+                <div class="element__group">
                     <h2 class="element__title">Гора Эльбрус</h2>
                     <img class="element__like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
             <div class="element">
-                <img class="MaskGroup" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
-                <div class="group">
+                <img class="element__maskgroup" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
+                <div class="element__group">
                     <h2 class="element__title">Домбай</h2>
                     <img class="element__Like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
             <div class="element">
-                <img class="MaskGroup" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Ч...">
-                <div class="group">
+                <img class="element__maskgroup" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Ч...">
+                <div class="element__group">
                     <h2 class="element__title">Карачаево-Ч...</h2>
                     <img class="element__like" src="./images/Like.svg" alt="лайк">
                 </div>
@@ -76,15 +76,15 @@
             <p class="footer__title">© 2020 Mesto Russia</p>
         </footer>
         <div class="popup">
-            <div class="boxForForm">
-                <img class="closeIkon" src="./images/CloseIcon.svg" alt="свернуть форму редактирования">
-                <div class="form form_visible">
-                    <h2 class="form__title">Редактировать профиль</h2>
-                    <form class="form__popup">
-                        <input type="text" placeholder="Название" class="form__input form__input_firstname">
-                        <input type="text" placeholder="Название" class="form__input form__input_profession">
+            <div class="popup__boxforform">
+                <img class="popup__closeikon" src="./images/CloseIcon.svg" alt="свернуть форму редактирования">
+                <div class="popup__form">
+                    <h2 class="popup__title">Редактировать профиль</h2>
+                    <form class="popup__fill">
+                        <input type="text" placeholder="Название" class="popup__input popup__input_firstname">
+                        <input type="text" placeholder="Название" class="popup__input popup__input_profession">
                     </form>
-                    <button class="button" type="submit">Сохранить</button>
+                    <button class="popup__button" type="submit">Сохранить</button>
                 </div>
             </div>
         </div>
