--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <p class="profile__subtext">Исследователь океана</p>
             </div>
             <button class="profile__add-button">
-                <img class="profile__add-button_img" src="./images/RectangleRect.svg" alt="редактировать">
+                <img class="profile__plus" src="./images/RectangleRect.svg" alt="редактировать">
             </button>
         </section>
         <section class="elements">
