--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <img class="element__maskgroup" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
                 <div class="element__group">
                     <h2 class="element__title">Домбай</h2>
-                    <img class="element__Like" src="./images/Like.svg" alt="лайк">
+                    <img class="element__like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
             <div class="element">
