fix: корректировка шрифта

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
         </section>
         <footer class="footer">
-            <p class="footer__title">© 2020 Mesto Russia</p>
+            <p class="footer__title">&copy 2020 Mesto Russia</p>
         </footer>
         <div class="popup">
             <div class="popup__boxforform">
