style: добавлено название карточки

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="element">
                 <img class="element__maskgroup" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Ч...">
                 <div class="element__group">
-                    <h2 class="element__title">Карачаево-Ч...</h2>
+                    <h2 class="element__title">Карачаево-Черкесия</h2>
                     <img class="element__like" src="./images/Like.svg" alt="лайк">
                 </div>
             </div>
