--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <main>
         <section class="profile">
             <img class="profile__avatar" src="./images/avatar.jpg" alt="Аватар">
-            <div class="profile__profile-Info">
+            <div class="profile__profile-info">
                 <div class="profile__content">
                     <h1 class="profile__firstname">Жак-Ив Кусто </h1>
-                    <button class="profile__edit-button">
+                    <button class="profile__edit-button" type="submit">
                         <img src="./images/Rectangle.svg" alt="редактировать">
                     </button>
                 </div>
                 <p class="profile__subtext">Исследователь океана</p>
             </div>
-            <button class="profile__add-button">
+            <button class="profile__add-button" type="submit">
                 <img class="profile__plus" src="./images/RectangleRect.svg" alt="редактировать">
             </button>
         </section>
@@ -33,63 +33,73 @@
                 <img class="element__maskgroup" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачевск">
                 <div class="element__group">
                     <h2 class="element__title">Карачаевск</h2>
-                    <img class="element__like" src="./images/Like.svg" alt="лайк">
+                    <button type="button">
+                        <img class="element__like" src="./images/Like.svg" alt="лайк">
+                    </button>
                 </div>
             </div>
             <div class="element">
                 <img class="element__maskgroup" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
                 <div class="element__group">
                     <h2 class="element__title">Гора Эльбрус</h2>
-                    <img class="element__like" src="./images/Like.svg" alt="лайк">
+                    <button type="button">
+                        <img class="element__like" src="./images/Like.svg" alt="лайк">
+                    </button>
                 </div>
             </div>
             <div class="element">
                 <img class="element__maskgroup" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
                 <div class="element__group">
                     <h2 class="element__title">Домбай</h2>
-                    <img class="element__like" src="./images/Like.svg" alt="лайк">
+                    <button type="button">
+                        <img class="element__like" src="./images/Like.svg" alt="лайк">
+                    </button>
                 </div>
             </div>
             <div class="element">
                 <img class="element__maskgroup" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
                 <div class="element__group">
                     <h2 class="element__title">Гора Эльбрус</h2>
-                    <img class="element__like" src="./images/Like.svg" alt="лайк">
+                    <button type="button">
+                        <img class="element__like" src="./images/Like.svg" alt="лайк">
+                    </button>
                 </div>
             </div>
             <div class="element">
                 <img class="element__maskgroup" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
                 <div class="element__group">
                     <h2 class="element__title">Домбай</h2>
-                    <img class="element__like" src="./images/Like.svg" alt="лайк">
+                    <button type="button">
+                        <img class="element__like" src="./images/Like.svg" alt="лайк">
+                    </button>
                 </div>
             </div>
             <div class="element">
                 <img class="element__maskgroup" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Ч...">
                 <div class="element__group">
                     <h2 class="element__title">Карачаево-Черкесия</h2>
-                    <img class="element__like" src="./images/Like.svg" alt="лайк">
+                    <button type="button">
+                        <img class="element__like" src="./images/Like.svg" alt="лайк">
+                    </button>
                 </div>
             </div>
         </section>
-        <footer class="footer">
-            <p class="footer__title">&copy; 2020 Mesto Russia</p>
-        </footer>
-        <div class="popup">
-            <div class="popup__boxforform">
-                <img class="popup__closeikon" src="./images/CloseIcon.svg" alt="свернуть форму редактирования">
-                <div class="popup__form">
-                    <h2 class="popup__title">Редактировать профиль</h2>
-                    <form class="popup__fill">
-                        <input type="text" placeholder="Название" class="popup__input popup__input_firstname">
-                        <input type="text" placeholder="Название" class="popup__input popup__input_profession">
-                    </form>
-                    <button class="popup__button" type="submit">Сохранить</button>
-                </div>
-            </div>
-        </div>
-        <script src="./index.js"></script>
     </main>
+    <footer class="footer">
+        <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
+    </footer>
+    <div class="popup">
+        <div class="popup__content">
+            <button class="popup__closeikon" src="./images/CloseIcon.svg" alt="свернуть форму редактирования" type="button"></button>
+            <form class="popup__form" name="form">
+                <h2 class="popup__title">Редактировать профиль</h2>
+                <input type="text" placeholder="Название" class="popup__input popup__input_field_firstname" name="firstname">
+                <input type="text" placeholder="Название" class="popup__input popup__input_field_profession" name="profession">
+                <button class="popup__button" type="submit">Сохранить</button>
+            </form>
+        </div>
+    </div>
+    <script src="./scripts/index.js"></script>
 </body>
 
 </html>
