--- a/index.html
+++ b/index.html
@@ -18,69 +18,53 @@
             <div class="profile__profile-info">
                 <div class="profile__content">
                     <h1 class="profile__firstname">Жак-Ив Кусто </h1>
-                    <button class="profile__edit-button" type="submit">
-                        <img src="./images/Rectangle.svg" alt="редактировать">
-                    </button>
+                    <button class="profile__edit-button" type="submit"></button>
                 </div>
                 <p class="profile__subtext">Исследователь океана</p>
             </div>
-            <button class="profile__add-button" type="submit">
-                <img class="profile__plus" src="./images/RectangleRect.svg" alt="редактировать">
-            </button>
+            <button class="profile__add-button" type="submit"></button>
         </section>
         <section class="elements">
             <div class="element">
                 <img class="element__maskgroup" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачевск">
                 <div class="element__group">
                     <h2 class="element__title">Карачаевск</h2>
-                    <button type="button">
-                        <img class="element__like" src="./images/Like.svg" alt="лайк">
-                    </button>
+                    <button class="element__like" type="button"></button>
                 </div>
             </div>
             <div class="element">
                 <img class="element__maskgroup" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
                 <div class="element__group">
                     <h2 class="element__title">Гора Эльбрус</h2>
-                    <button type="button">
-                        <img class="element__like" src="./images/Like.svg" alt="лайк">
-                    </button>
+                    <button class="element__like" type="button"></button>
                 </div>
             </div>
             <div class="element">
                 <img class="element__maskgroup" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
                 <div class="element__group">
                     <h2 class="element__title">Домбай</h2>
-                    <button type="button">
-                        <img class="element__like" src="./images/Like.svg" alt="лайк">
-                    </button>
+                    <button class="element__like" type="button"></button>
                 </div>
             </div>
             <div class="element">
                 <img class="element__maskgroup" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
                 <div class="element__group">
                     <h2 class="element__title">Гора Эльбрус</h2>
-                    <button type="button">
-                        <img class="element__like" src="./images/Like.svg" alt="лайк">
-                    </button>
+                    <button class="element__like" type="button"></button>
                 </div>
             </div>
             <div class="element">
                 <img class="element__maskgroup" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
                 <div class="element__group">
                     <h2 class="element__title">Домбай</h2>
-                    <button type="button">
-                        <img class="element__like" src="./images/Like.svg" alt="лайк">
-                    </button>
+                    <button class="element__like" type="button"></button>
                 </div>
             </div>
             <div class="element">
                 <img class="element__maskgroup" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Ч...">
                 <div class="element__group">
                     <h2 class="element__title">Карачаево-Черкесия</h2>
-                    <button type="button">
-                        <img class="element__like" src="./images/Like.svg" alt="лайк">
-                    </button>
+                    <button class="element__like" type="button"></button>
                 </div>
             </div>
         </section>
