--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </footer>
     <div class="popup">
         <div class="popup__content">
-            <button class="popup__closeikon" src="./images/CloseIcon.svg" alt="свернуть форму редактирования" type="button"></button>
+            <button class="popup__closeikon" type="button"></button>
             <form class="popup__form" name="form">
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <input type="text" placeholder="Название" class="popup__input popup__input_field_firstname" name="firstname">
