--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <div class="profile__profile-info">
                 <div class="profile__content">
                     <h1 class="profile__firstname">Жак-Ив Кусто </h1>
-                    <button class="profile__edit-button" type="submit"></button>
+                    <button class="profile__edit-button" type="button"></button>
                 </div>
                 <p class="profile__subtext">Исследователь океана</p>
             </div>
-            <button class="profile__add-button" type="submit"></button>
+            <button class="profile__add-button" type="button"></button>
         </section>
         <section class="elements">
             <div class="element">
@@ -74,7 +74,7 @@
     </footer>
     <div class="popup">
         <div class="popup__content">
-            <button class="popup__closeikon" type="button"></button>
+            <button class="popup__close-button" type="button"></button>
             <form class="popup__form" name="form">
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <input type="text" placeholder="Название" class="popup__input popup__input_field_firstname" name="firstname">
