--- a/index.html
+++ b/index.html
@@ -25,46 +25,24 @@
             <button class="profile__add-button" type="button"></button>
         </section>
         <section class="elements">
-            <div class="element">
-                <img class="element__maskgroup" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачевск">
-                <div class="element__group">
-                    <h2 class="element__title">Карачаевск</h2>
-                    <button class="element__like" type="button"></button>
+            <!-- заготовка для изображения пользователя -->
+            <template class="work-piece">
+                <div class="element">
+                    <img class="element__maskgroup" src=""
+                        alt="">
+                    <div class="element__group">
+                        <h2 class="element__title"></h2>
+                        <button class="element__like" type="button"></button>
+                        <button class="element__button-delete"></button>
+                    </div>
                 </div>
-            </div>
-            <div class="element">
-                <img class="element__maskgroup" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
-                <div class="element__group">
-                    <h2 class="element__title">Гора Эльбрус</h2>
-                    <button class="element__like" type="button"></button>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__maskgroup" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
-                <div class="element__group">
-                    <h2 class="element__title">Домбай</h2>
-                    <button class="element__like" type="button"></button>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__maskgroup" src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус">
-                <div class="element__group">
-                    <h2 class="element__title">Гора Эльбрус</h2>
-                    <button class="element__like" type="button"></button>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__maskgroup" src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай">
-                <div class="element__group">
-                    <h2 class="element__title">Домбай</h2>
-                    <button class="element__like" type="button"></button>
-                </div>
-            </div>
-            <div class="element">
-                <img class="element__maskgroup" src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаево-Ч...">
-                <div class="element__group">
-                    <h2 class="element__title">Карачаево-Черкесия</h2>
-                    <button class="element__like" type="button"></button>
+            </template>
+            <!-- Масштабированное изображение -->
+            <div class="elements__image-boost">
+                <div class="elements__image-content">
+                    <button class="popup__close-button popup__close-button_image_big" type="button"></button>
+                    <img class="elements__image-big" src="" alt="#">
+                    <p class="elements__image-title">Карачаево-Черкесия</p>
                 </div>
             </div>
         </section>
@@ -77,8 +55,22 @@
             <button class="popup__close-button" type="button"></button>
             <form class="popup__form" name="form">
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <input type="text" placeholder="Название" class="popup__input popup__input_field_firstname" name="firstname">
-                <input type="text" placeholder="Название" class="popup__input popup__input_field_profession" name="profession">
+                <input type="text" placeholder="Имя" class="popup__input popup__input_field_firstname" name="firstname">
+                <input type="text" placeholder="Профессия" class="popup__input popup__input_field_profession"
+                    name="profession">
+                <button class="popup__button" type="submit">Сохранить</button>
+            </form>
+        </div>
+    </div>
+    <!-- добавление изображений пользователем -->
+    <div class="popup popup_image_content">
+        <div class="popup__content">
+            <button class="popup__close-button popup__close-button_image_contant" type="button"></button>
+            <form class="popup__form popup__form_image_add" name="form">
+                <h2 class="popup__title">Новое место</h2>
+                <input type="text" placeholder="Название" class="popup__input popup__input_name_image" name="firstname">
+                <input type="text" placeholder="Ссылка на картинку" class="popup__input popup__input_link_image"
+                    name="profession">
                 <button class="popup__button" type="submit">Сохранить</button>
             </form>
         </div>
