--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <!-- заготовка для изображения пользователя -->
             <template class="work-piece">
                 <div class="element">
-                    <img class="element__maskgroup" src=""
+                    <img class="element__maskgroup" src="#"
                         alt="">
                     <div class="element__group">
                         <h2 class="element__title"></h2>
@@ -41,7 +41,7 @@
             <div class="elements__image-boost">
                 <div class="elements__image-content">
                     <button class="popup__close-button popup__close-button_image_big" type="button"></button>
-                    <img class="elements__image-big" src="" alt="#">
+                    <img class="elements__image-big" src="#" alt="#">
                     <p class="elements__image-title">Карачаево-Черкесия</p>
                 </div>
             </div>
