--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- Масштабированное изображение -->
             <div class="elements__image-boost">
                 <div class="elements__image-content">
-                    <button class="popup__close-button popup__close-button_image_big" type="button"></button>
+                    <button class="elements__button-image" type="button"></button>
                     <img class="elements__image-big" src="#" alt="#">
                     <p class="elements__image-title">Карачаево-Черкесия</p>
                 </div>
