--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
     <footer class="footer">
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
+    <!-- Редактирование профиля -->
     <div class="popup popup_user_input">
         <div class="popup__content">
-            <button class="popup__close-button" type="button"></button>
+            <button class="popup__close-button popup__close-button_profile_edit" type="button"></button>
             <form class="popup__form popup__form_user_input" name="form">
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <input required type="text" placeholder="Имя" class="popup__input popup__input_field_firstname" name="firstname">
