--- a/index.html
+++ b/index.html
@@ -42,28 +42,42 @@
         <p class="footer__copyright">&copy; 2020 Mesto Russia</p>
     </footer>
     <!-- Редактирование профиля -->
-    <div class="popup popup_user_input">
+    <div class="popup popup_user_input popup_overlay">
         <div class="popup__content">
             <button class="popup__close-button popup__close-button_profile_edit" type="button"></button>
-            <form class="popup__form popup__form_user_input" name="form">
+            <form class="popup__form popup__form_user_input" name="form" novalidate>
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <input required type="text" placeholder="Имя" class="popup__input popup__input_field_firstname" name="firstname">
-                <input required type="text" placeholder="Профессия" class="popup__input popup__input_field_profession"
-                    name="profession">
-                <button class="popup__button" type="submit">Сохранить</button>
+                <div class="popup__input-conainer">
+                    <input type="text" placeholder="Имя" class="popup__input popup__input_field_firstname"
+                        name="firstname" id="username-input" minlength="2" maxlength="40" required>
+                    <span class="popup__input_text_error" id="error-image"></span>
+                </div>
+                <div class="popup__input-conainer">
+                    <input type="text" placeholder="Профессия" class="popup__input popup__input_field_profession"
+                        name="profession" id="profession-input" minlength="2" maxlength="200" required>
+                    <span class="popup__input_text_error" id="error-image"></span>
+                </div>
+                <button class="popup__button popup__button_user_info" type="submit">Сохранить</button>
             </form>
         </div>
     </div>
     <!-- добавление изображений пользователем -->
-    <div class="popup popup_image_content">
+    <div class="popup popup_image_content popup_overlay">
         <div class="popup__content">
             <button class="popup__close-button popup__close-button_image_contant" type="button"></button>
-            <form class="popup__form popup__form_image_add" name="form">
+            <form class="popup__form popup__form_image_add" name="form" novalidate>
                 <h2 class="popup__title">Новое место</h2>
-                <input required type="text" placeholder="Название" class="popup__input popup__input_name_image" name="image-title">
-                <input required type="url" placeholder="Ссылка на картинку" class="popup__input popup__input_link_image"
-                    name="link-caption">
-                <button class="popup__button" type="submit">Сохранить</button>
+                <div class="popup__input-conainer">
+                    <input type="text" placeholder="Название" class="popup__input popup__input_name_image"
+                        name="image-title" id="input-image" minlength="2" maxlength="30" required>
+                    <span class="popup__input_text_error" id="error-image"></span>
+                </div>
+                <div class="popup__input-conainer">
+                    <input type="url" placeholder="Ссылка на картинку" class="popup__input popup__input_link_image"
+                        name="link" required>
+                    <span class="popup__input_text_error" id="error-link"></span>
+                </div>
+                <button class="popup__button popup__button_user_image" type="submit">Сохранить</button>
             </form>
         </div>
     </div>
@@ -76,6 +90,8 @@
         </div>
     </div>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
+    <!-- <script src="./scripts/validTR.js"></script> -->
 </body>
 
 </html>
