--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                 <div class="popup__input-conainer">
                     <input type="text" placeholder="Имя" class="popup__input popup__input_field_firstname"
                         name="firstname" id="username-input" minlength="2" maxlength="40" required>
-                    <span class="popup__input_text_error" id="error-image"></span>
+                    <span class="popup__input_text_error" id="error-firstname"></span>
                 </div>
                 <div class="popup__input-conainer">
                     <input type="text" placeholder="Профессия" class="popup__input popup__input_field_profession"
                         name="profession" id="profession-input" minlength="2" maxlength="200" required>
-                    <span class="popup__input_text_error" id="error-image"></span>
+                    <span class="popup__input_text_error" id="error-text"></span>
                 </div>
                 <button class="popup__button popup__button_user_info" type="submit">Сохранить</button>
             </form>
