--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                 <div class="popup__input-conainer">
                     <input type="text" placeholder="Имя" class="popup__input popup__input_field_firstname"
                         name="firstname" id="username-input" minlength="2" maxlength="40" required>
-                    <span class="popup__input_text_error" id="error-firstname"></span>
+                    <span class="popup__text-error" id="error-firstname"></span>
                 </div>
                 <div class="popup__input-conainer">
                     <input type="text" placeholder="Профессия" class="popup__input popup__input_field_profession"
                         name="profession" id="profession-input" minlength="2" maxlength="200" required>
-                    <span class="popup__input_text_error" id="error-text"></span>
+                    <span class="popup__text-error" id="error-text"></span>
                 </div>
                 <button class="popup__button popup__button_user_info" type="submit">Сохранить</button>
             </form>
@@ -70,12 +70,12 @@
                 <div class="popup__input-conainer">
                     <input type="text" placeholder="Название" class="popup__input popup__input_name_image"
                         name="image-title" id="input-image" minlength="2" maxlength="30" required>
-                    <span class="popup__input_text_error" id="error-image"></span>
+                    <span class="popup__text-error" id="error-image"></span>
                 </div>
                 <div class="popup__input-conainer">
                     <input type="url" placeholder="Ссылка на картинку" class="popup__input popup__input_link_image"
                         name="link" required>
-                    <span class="popup__input_text_error" id="error-link"></span>
+                    <span class="popup__text-error" id="error-link"></span>
                 </div>
                 <button class="popup__button popup__button_user_image" type="submit">Сохранить</button>
             </form>
