--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
     </div>
     <!-- Масштабированное изображение -->
-    <div class="popup popup_image_scale">
+    <div class="popup popup_image_scale popup_overlay">
         <div class="popup__image-content">
             <button class="popup__close-button popup__close-button_image_scale" type="button"></button>
             <img class="popup__image-scale" src="#" alt="#">
