--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
             <p class="popup__image-title">Карачаево-Черкесия</p>
         </div>
     </div>
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
 
+    <script src="./scripts/index.js" type="module"></script>
+    <!-- <script type="module" src="./scripts/FormValidator.js type="module"></script> --> 
 </body>
 
 </html>
