--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <!-- заготовка для изображения пользователя -->
             <template class="work-piece">
                 <div class="element">
-                    <img class="element__maskgroup" src="#" alt="">
+                    <img class="element__maskgroup" src="1" alt="1">
                     <div class="element__group">
                         <h2 class="element__title"></h2>
                         <button class="element__like" type="button"></button>
