--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
                 <div class="popup__set">
                     <div class="popup__input-conainer">
                         <input type="text" placeholder="Название" class="popup__input popup__input_name_image"
-                            name="image-title" id="input-image" minlength="2" maxlength="30" required>
+                            name="image_title" id="input-image" minlength="2" maxlength="30" required>
                         <span class="popup__text-error" id="error-image"></span>
                     </div>
                     <div class="popup__input-conainer">
@@ -95,7 +95,6 @@
     </div>
 
     <script src="./scripts/index.js" type="module"></script>
-    <!-- <script type="module" src="./scripts/FormValidator.js type="module"></script> --> 
 </body>
 
 </html>
