--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
         </div>
     </div>
 
-    <script src="./pages/index.js" type="module"></script>
+    <!-- <script src="./pages/index.js" type="module"></script> -->
 </body>
 
 </html>
