--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
     <div class="popup popup_user_input popup_overlay">
         <div class="popup__content">
             <button class="popup__close-button popup__close-button_profile_edit" type="button"></button>
-            <form class="popup__form popup__form_user_input" name="form" novalidate>
+            <form class="popup__form popup__form_user_input" name="formUserRedactInfo" novalidate>
                 <h2 class="popup__title">Редактировать профиль</h2>
                 <div class="popup__set">
                     <div class="popup__input-conainer">
@@ -67,7 +67,7 @@
     <div class="popup popup_image_content popup_overlay">
         <div class="popup__content">
             <button class="popup__close-button popup__close-button_image_contant" type="button"></button>
-            <form class="popup__form popup__form_image_add" name="form" novalidate>
+            <form class="popup__form popup__form_image_add" name="formUserImageAdd" novalidate>
                 <h2 class="popup__title">Новое место</h2>
                 <div class="popup__set">
                     <div class="popup__input-conainer">
